cite_qc: added br in the header to fix spacing in mobile

--- a/css/cite_qc.css
+++ b/css/cite_qc.css
@@ -1,77 +1,108 @@
-/* For All Screens */
-@media screen {
-    .logo {
-        height: 8vh;
-        width: 8vw;
-    }
-    .item {
-        border-radius: 13px;
-        background-color: var(--l-bg-1);
-        padding: 2vh 2vw;
-        margin-bottom: 4vh;
+h3 {
+    margin-bottom: 0;
+}
+.logo {
+    height: 8vh;
+    width: 8vw;
+}
+.item {
+    border-radius: 13px;
+    background-color: var(--l-bg-1);
+    padding: 2vh 2vw;
+    margin-bottom: 4vh;
+}
+p, ul, li {
+    font-family: 'Times New Roman';
+}
+img {
+    width: 100%;
+}
+li {
+    margin-bottom: 1vh;
+}
+details {
+    cursor: pointer;
+    width: max-content;
+    position: fixed;
+    background-color: var(--l-bg-0);
+}
+#scrollable-content > div {
+    display: none;
+    margin-top: 22vh;
+}
+#scrollable-content > div[active] {
+    display: block;
+}
+.header {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    width: 100%;
+    background-color: var(--l-bg-0);
+    top:0;
+}
+#fixed-content hr {
+    margin-bottom: 0;
+}
+ol.char {
+    list-style: lower-alpha;
+}
+
+/*  mobile screens */
+@media screen and (max-width: 820px) {
+    #main-content {
+        font-size: 1rem;
     }
     p, ul, li {
-        font-family: 'Times New Roman';
-    }
-    img {
-        width: 50%;
-    }
-    li {
-        margin-bottom: 1vh;
+        font-size: .9rem;
     }
     details {
-        cursor: pointer;
-        width: max-content;
-        position: fixed;
-        background-color: var(--l-bg-0);
-    }
-    #scrollable-content > div {
-        display: none;
-        margin-top: 26vh;
-    }
-    #scrollable-content > div[active] {
-        display: block;
-    }
-    .header {
-        display: flex;
-        flex-direction: column;
-        position: fixed;
-        width: 100%;
-        background-color: var(--l-bg-0);
-        top:0;
+        font-size: 1.3rem;
     }
     #fixed-content hr {
-        margin-bottom: 0;
+        margin-top: 6%;
+    }
+
+    /* Lowered position of the menu as to not cover the header's txt */
+    #mobile-nav {
+        top:8vh;
+    }
+    .item {
+        padding: 2vh 4vw;
     }
 }
 
-/*  For all mobile screens */
-@media screen and (max-width: 820px) {
+/* Half opened pc window */
+@media screen and (max-width: 820px) and (hover: hover) {
     #main-content {
         font-size: 1.1rem;
     }
     p, ul, li {
-        font-size: 1rem;
-    }   
-    #fixed-content hr {
-        margin-top: 6%;
+        font-size: 1.3rem;
     }
 }
 
-/*  For all mobile screens in portrait mode */
+/*  mobile screens in portrait mode */
 @media screen and (max-width: 820px) and (orientation: portrait) {
 
 }
 
-/*  For all mobile screens in landscape mode*/
+/*  mobile screens in landscape mode*/
 @media screen and (max-width: 820px) and (orientation: landscape){
 
 }
 
-/* For all desktop */
+/* pc */
 @media screen and (min-width: 820px) {
+    img {
+        width: 50%;
+    }
     #fixed-content {
-        padding: 1em;
+        padding: 1vh 1vw;
+    }
+    /* Hides all br tag with class mob (stands for mobile) */
+    br.mob {
+        display: none;
     }
 }
 /* For Desktop and landscape oriented mobile screens */
@@ -79,7 +110,7 @@
 
 }
 
-/* For all hovering capable screens */
+/* hovering capable screens */
 @media (hover: hover) {
     details option:hover {
         background-color: var(--l-bg-1);
